# mcangen

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
man/: mcangen.1
src/: main.rs
