[package]
name = "mcangen"
version = "1.6.0"
edition = "2021"
rust-version = "1.94"
description = "High-performance CAN bus frame generator for testing and benchmarking"
license = "MIT"
authors = ["Dr. Michael 'Mickey' Lauer <mickey@vanille-media.de>"]
repository = "https://github.com/mickeyl/mcangen"
readme = "README.md"
keywords = ["can", "canbus", "socketcan", "testing", "benchmarking"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
fastrand = "2"
libc = "0.2"
nix = { version = "0.31", features = ["socket", "net", "time"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
